--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-ƒeƒXƒg
+Sen is a morphological analyzer written in Java. Sen is Java port of <a href="http://cl.aist-nara.ac.jp/~taku-ku/software/mecab/">Mecab</a>.
 </body>
 </html>
